Remove proposal ranges and fix stalled villager construction